# gd32f4xx_pac

./: Cargo.toml  README.md  codegen.sh  pyright.json
.cargo/: config.toml
.zed/: settings.json
scripts/: patchsvd.py
src/: adc0.rs  adc_common.rs  ctc.rs  dac.rs  dbg.rs  dci.rs  dma0.rs  enet_dma.rs  enet_mac.rs  enet_mac_fcth.rs  enet_msc.rs  enet_ptp.rs  exmc.rs  fmc.rs  fs_device.rs  fs_global.rs  fs_host.rs  gpioc.rs  hs_device.rs  hs_global.rs  hs_host.rs  hs_pwrclk.rs  i2c0.rs  ipa.rs  iref.rs  lib.rs  rcu.rs  rtc.rs  sdio.rs  spi0.rs  spi5.rs  syscfg.rs  timer0.rs  timer1.rs  timer5.rs  timer8.rs  timer9.rs  tli.rs  trng.rs  uart3.rs  (+1 more)
src/adc0/: ctl0.rs  ctl1.rs  ovsampctl.rs  sampt0.rs  stat.rs
src/adc_common/: sstat.rs  syncctl.rs  syncdata.rs
src/can0/: bt.rs  fctl.rs
src/ctc/: ctl0.rs  ctl1.rs  intc.rs  stat.rs
src/dac/: ctl.rs  dac0_do.rs  dac0_l12dh.rs  dac0_r12dh.rs  dac0_r8dh.rs  dac1_do.rs  dac1_l12dh.rs  dac1_r12dh.rs  dac1_r8dh.rs  dacc_l12dh.rs  dacc_r12dh.rs  dacc_r8dh.rs  stat.rs  swt.rs
src/dbg/: ctl0.rs  ctl1.rs  ctl2.rs
src/dci/: ctl.rs  cwspos.rs  cwsz.rs  data.rs  intc.rs  inten.rs  intf.rs  sc.rs  scumsk.rs  stat0.rs  stat1.rs
src/dma0/: ch0ctl.rs  ch0fctl.rs  ch0m0addr.rs  ch0m1addr.rs  ch1ctl.rs  ch1fctl.rs  ch1m0addr.rs  ch1m1addr.rs  ch2ctl.rs  ch2fctl.rs  ch2m0addr.rs  ch2m1addr.rs  ch3ctl.rs  ch3fctl.rs  ch3m0addr.rs  ch3m1addr.rs  ch4ctl.rs  ch4fctl.rs  ch4m0addr.rs  ch4m1addr.rs  ch5ctl.rs  ch5fctl.rs  ch5m0addr.rs  ch5m1addr.rs  ch6ctl.rs  ch6fctl.rs  ch6m0addr.rs  ch6m1addr.rs  intc0.rs  (+9 more)
svd/: patched_gd32f4xx.svd
(+572 files in other folders)
